--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_API_KEY="AIfthffghdN9Djmas4QC56565uQ"
+GOOGLE_API_KEY="your_api_key_here"
 # change this key to actual api key value
 # I've entered a wrong key value here for safety
